[package]
name = "seeder-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
sha2 = "0.11"
rand = "0.10"
hex = "0.4"
futures = "0.3"
base32 = "0.5"
tracing = "0.1"
thiserror = "2"
