[package]
name = "seeder-publish"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
seeder-core = { path = "../seeder-core" }
reqwest = { version = "0.13", features = ["json"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
